  . Fixed bug #70572 segfault in mysqlnd_connect. (Andrey, Remi)
  . Fixed Bug #69796 (mysqli_stmt::fetch doesn't assign null values to
    bound variables). (Laruence)

- OCI8:
  . Fixed memory leak with LOBs. (Senthil)
  . Fixed bug #68298 (OCI int overflow) (Senthil).
  . Corrected oci8 hash destructors to prevent segfaults, and a few other fixes.
    (Cameron Porter)

- ODBC:
  . Fixed bug #69975 (PHP segfaults when accessing nvarchar(max) defined
    columns). (cmb)

- Opcache:
  . Fixed bug #70656 (require() statement broken after opcache_reset() or a
    few hours of use). (Laruence)
  . Fixed bug #70843 (Segmentation fault on MacOSX with
    opcache.file_cache_only=1). (Laruence)
  . Fixed bug #70724 (Undefined Symbols from opcache.so on Mac OS X 10.10).
    (Laruence)
  . Fixed compatibility with Windows 10 (see also bug #70652). (Anatol)
  . Attmpt to fix "Unable to reattach to base address" problem. (Matt Ficken)
  . Fixed bug #70423 (Warning Internal error: wrong size calculation). (Anatol)
  . Fixed bug #70237 (Empty while and do-while segmentation fault with opcode
    on CLI enabled). (Dmitry, Laruence)
  . Fixed bug #70111 (Segfault when a function uses both an explicit return
    type and an explicit cast). (Laruence)
  . Fixed bug #70058 (Build fails when building for i386). (Laruence)
  . Fixed bug #70022 (Crash with opcache using opcache.file_cache_only=1).
    (Anatol)
  . Removed opcache.load_comments configuration directive. Now doc comments
    loading costs nothing and always enabled. (Dmitry)
  . Fixed bug #69838 (Wrong size calculation for function table). (Anatol)
  . Fixed bug #69688 (segfault with eval and opcache fast shutdown).
    (Laruence)
  . Added experimental (disabled by default) file based opcode cache.
    (Dmitry, Laruence, Anatol)
  . Fixed bug with try blocks being removed when extended_info opcode
    generation is turned on. (Laruence)
  . Fixed bug #68644 (strlen incorrect : mbstring + func_overload=2 +UTF-8